.vscode/allianceuat_compare/force-app/main/default/objects/b3f__Form__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ID Doc</fullName>
            </value>
            <value>
                <fullName>Licence</fullName>
            </value>
            <value>
                <fullName>Mandatory Training</fullName>
            </value>
            <value>
                <fullName>Practical Training</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Vaccination/Immunisation</fullName>
            </value>
            <value>
                <fullName>Client Induction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>