.vscode/allianceuat_compare/force-app/main/default/objects/b3f__Form__c/fields/CV_Upload_Field_Ref__c.field-meta.xml
<CustomField>
    <fullName>CV_Upload_Field_Ref__c</fullName>
    <label>CV Upload Field Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>