.vscode/allianceuat_compare/force-app/main/default/objects/b3f__Form__c/fields/Parse_CV_on_this_form__c.field-meta.xml
<CustomField>
    <fullName>Parse_CV_on_this_form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parse CV on this form</label>
    <type>Checkbox</type>
</CustomField>