.vscode/allianceuat_compare/force-app/main/default/objects/b3f__Form__c/fields/Route_EOI_Sourcing_Role_to_Job__c.field-meta.xml
<CustomField>
    <fullName>Route_EOI_Sourcing_Role_to_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Route EOI Sourcing Role to Job</label>
    <type>Checkbox</type>
</CustomField>