.vscode/allianceuat_compare/force-app/main/default/objects/b3f__Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>b3f__Object_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>b3f__Form_Style__c</columns>
    <columns>b3f__Is_Form_Live__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>